Revert "fix flexbox on firefox"
This reverts commit b4986589b99b0da81f74c27f75d312afa341c0c8.

--- a/css/styles.css
+++ b/css/styles.css
@@ -41,7 +41,10 @@ section:nth-of-type(3) {
 section:nth-of-type(2) {
     height: 150vh;
     max-height: 140vw;
+    display: flex;
+    justify-content: center;
     margin-bottom: -10px;
+    flex-wrap: nowrap;
 }
 footer {
     padding-left: 50px !important;
@@ -187,7 +190,14 @@ object[data="img/soil.svg"] {
 img[src="img/front cave.png"] {
     z-index: 6;
     margin-top: -10px;
+    width: calc(100% + 10px);
     height: 100%;
+}
+.caveBackground {
+    z-index: 3;
+    width: 100%;
+    top: 30%;
+    height: 80%;
 }
 img[src="img/cave layer 2.png"] {
     z-index: 4;
@@ -201,8 +211,8 @@ img[src="img/back cave 4.png"] {
 img[src="img/schedule.png"] {
     z-index: 6;
     margin-top: 20px;
-    left: 50%;
-    margin-left: -35%;
+    margin-left: 15px;
+    margin-right: 15px;
     height: auto;
     width: 80%;
 }
@@ -241,9 +251,6 @@ iframe {
   color: white;
   z-index: 8;
   margin-top: -2.5vw;
-  position: absolute;
-  text-align: center;
-  width: 100%;
 }
 #FAQ {
   color: white;
